# zopfli

./: .aider.chat.history.md  .aider.input.history  .gitignore  zopfli
port/: CLAUDE_SETUP_CONVERSATION.md  CODEBASE_ANALYSIS.md  INITIAL_SCAN.md  REPOMIX.md  RUST_PORTING.md  RUST_SETUP.md  SINGLE_FUNCTION_PORTING_GUIDE.md  TASKS.md  TODO_PHASE_7_DEFLATE.md
port/bugs/: 20241219_deflate_dynamic_huffman_mismatch.md  20241219_deflate_tree_encoding_discrepancy.md  20241219_lz77_incomplete_implementation.md  20241219_lz77_incomplete_implementation_RESOLVED.md  20241219_squeeze_divergent_output.md
port/logs/: CLAUDE_FIX_FUZZING.md  CLAUDE_FIX_FUZZING_2.md  CLAUDE_PHASE_3.md  CLAUDE_PHASE_4.md  CLAUDE_PHASE_5.md  CLAUDE_PHASE_6.md  CLAUDE_PHASE_7.md  CLAUDE_PHASE_7B.md
scripts/: build_hybrid.sh
src/zopfli/: squeeze.c
zopfli-rs/: Cargo.toml  build.rs
zopfli-rs/benches/: compression.rs
zopfli-rs/fuzz/: Cargo.toml
zopfli-rs/fuzz/fuzz_targets/: fuzz_blocksplitter.rs  fuzz_cache.rs  fuzz_deflate.rs  fuzz_gzip_container.rs  fuzz_hash.rs  fuzz_lz77.rs  fuzz_lz77_comprehensive.rs  fuzz_squeeze.rs  fuzz_symbols.rs  fuzz_tree.rs  fuzz_zlib_container.rs  fuzz_zopfli_compress.rs
zopfli-rs/src/: blocksplitter.rs  bridge.rs  cache.rs  deflate.rs  deflate_debug.rs  ffi.rs  gzip_container.rs  hash.rs  lib.rs  lz77.rs  lz77_store_wrapper.c  options.rs  squeeze.rs  symbols.rs  symbols_wrapper.c  tree.rs  util.rs  zlib_container.rs  zopfli.rs
