[package]
name = "zopfli"
version = "0.1.0"
edition = "2021"
authors = ["Zopfli Rust Port Contributors"]
description = "Rust port of the Zopfli compression library"
license = "Apache-2.0"
repository = "https://github.com/google/zopfli"

[features]
default = ["c-fallback"]
c-fallback = ["cc", "glob"]
pure-rust = []
lz77-rust = []
deflate-rust = []
hash-rust = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", optional = true }
glob = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "compression"
harness = false

[profile.dev]
debug = true
overflow-checks = true

[profile.release]
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true