[package]
name = "zopfli-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.zopfli]
path = ".."
features = ["c-fallback"]

[[bin]]
name = "fuzz_symbols"
path = "fuzz_targets/fuzz_symbols.rs"
test = false
doc = false

[[bin]]
name = "fuzz_tree"
path = "fuzz_targets/fuzz_tree.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hash"
path = "fuzz_targets/fuzz_hash.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cache"
path = "fuzz_targets/fuzz_cache.rs"
test = false
doc = false

[[bin]]
name = "fuzz_lz77"
path = "fuzz_targets/fuzz_lz77.rs"
test = false
doc = false

[[bin]]
name = "fuzz_lz77_comprehensive"
path = "fuzz_targets/fuzz_lz77_comprehensive.rs"
test = false
doc = false