[package]
name = "zopfli-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
default = ["c-fallback"]
c-fallback = ["cc", "glob"]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", optional = true }
glob = { version = "0.3", optional = true }


[dependencies.zopfli]
path = ".."
features = ["c-fallback"]

[[bin]]
name = "fuzz_symbols"
path = "fuzz_targets/fuzz_symbols.rs"
test = false
doc = false

[[bin]]
name = "fuzz_tree"
path = "fuzz_targets/fuzz_tree.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hash"
path = "fuzz_targets/fuzz_hash.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cache"
path = "fuzz_targets/fuzz_cache.rs"
test = false
doc = false

[[bin]]
name = "fuzz_lz77"
path = "fuzz_targets/fuzz_lz77.rs"
test = false
doc = false

[[bin]]
name = "fuzz_lz77_comprehensive"
path = "fuzz_targets/fuzz_lz77_comprehensive.rs"
test = false
doc = false

[[bin]]
name = "fuzz_squeeze"
path = "fuzz_targets/fuzz_squeeze.rs"
test = false
doc = false

[[bin]]
name = "fuzz_blocksplitter"
path = "fuzz_targets/fuzz_blocksplitter.rs"
test = false
doc = false

[[bin]]
name = "fuzz_deflate"
path = "fuzz_targets/fuzz_deflate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gzip_container"
path = "fuzz_targets/fuzz_gzip_container.rs"
test = false
doc = false

[[bin]]
name = "fuzz_zlib_container"
path = "fuzz_targets/fuzz_zlib_container.rs"
test = false
doc = false

[[bin]]
name = "fuzz_zopfli_compress"
path = "fuzz_targets/fuzz_zopfli_compress.rs"
test = false
doc = false